# cvcvcv

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
cv/: models.py  settings.py  urls.py  views.py
cv/migrations/: 0001_initial.py  0002_alter_experience_end_date.py  0003_remove_education_start_date.py  0004_education_grade.py  0005_info_projectenglish_name_projectgerman_name.py  0006_info_alternative_value.py  0007_remove_info_alternative_value_remove_info_key_and_more.py  0008_alter_infogerman_key_alter_infogerman_value.py  0009_coverletter.py  0010_project_image.py
cv/templates/: base.html
cv/templates/cv/: cover_letter_confirm_delete.html  cover_letter_form.html  cover_letter_list.html  cv_form.html  cv_template.html  dashboard.html  education_confirm_delete.html  education_detail.html  education_form.html  education_list.html  experience_confirm_delete.html  experience_detail.html  experience_form.html  experience_list.html  info_confirm_delete.html  info_form.html  info_list.html  project_confirm_delete.html  project_detail.html  project_form.html  project_list.html  skill_confirm_delete.html  skill_detail.html  skill_form.html  skill_list.html
cv/templatetags/: cv_extras.py
cvcvcv/: asgi.py  settings.py  urls.py  wsgi.py
