[project]
name = "cvcvcv"
version = "0.1.0"
description = ""
authors = [
    {name = "Kolja Sam",email = "github@koljapluemer.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "weasyprint (==65.1)",
    "django (==5.2)",
    "markdown (>=3.9,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
